# X5Case

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml  flake.nix
backend/: .env  .env.example  .gitignore  docker-compose.dev.yml  docker-compose.hackathon.yml  docker-compose.prod.yml  docker-compose.yml
backend/api_gateway/: Dockerfile  pyproject.toml
backend/api_gateway/app/: main.py  services.py
backend/docs/: api-endpoints.md  database-guide.md  dev-backend-quickstart.md  hackathon-mode.md  migrations-guide.md  poetry-guide.md  prod-strategy.md
backend/docs/architecture/: README.md  api-gateway.md  architecture-overview.md  data-flow.md  ner-service.md  search-service.md
backend/mock_ner_service/: Dockerfile  pyproject.toml
backend/mock_ner_service/app/: main.py
backend/ner_service/: Dockerfile  pyproject.toml
backend/ner_service/app/: main.py  mock_model.py  schemas.py
backend/search_service/: Dockerfile  alembic.ini  pyproject.toml
backend/search_service/alembic/: env.py
backend/search_service/alembic/versions/: 101034c2460a_create_product_table.py  9d251f5be710_add_brand_volume_percentage_columns.py
backend/search_service/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/search_service/scripts/: seed.py
backend/tests/: test_load.py  test_rps.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: productsApi.ts
frontend/src/components/: ProductCategoriesDropdown.tsx
frontend/src/components/common/: CardProduct.tsx
frontend/src/components/ui/layouts/: footer.tsx  header.tsx
frontend/src/config/: category.config.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: HomePage.tsx  ProductPage.tsx
frontend/src/store/: store.ts
frontend/src/types/: product.ts
ml/: .dockerignore  .gitignore  1.ipynb  Dockerfile  README.md  logic.py  main.ipynb  main.py  pyproject.toml  run.ps1  run.sh  schemas.py  test.ipynb
ml/app/: logic.py  main.py  model.ipynb  schemas.py
ml/configs/: config_cpu.cfg  config_fixed.cfg  config_gpu.cfg  config_gpu_large.cfg  config_transformer.cfg
ml/docs/: API.md
ml/model/: config.cfg  meta.json
ml/model/ner/: model  moves
ml/model/vocab/: strings.json
ml/scripts/: data_augmentation.py  preprocessing.py
