[project]
name = "x5case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "spacy[transformers]>=3.8.7",
    "gunicorn>=23.0.0",
    "torch>=2.8.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
