[project]
name = "search-service"
version = "0.1.0"
description = ""
authors = [
    {name = "shorins",email = "mighty.shorin@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all] (>=0.116.2,<0.117.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "alembic (>=1.16.5,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
